--- a/src/SYDesktop.mxml
+++ b/src/SYDesktop.mxml
@@ -7,4 +7,5 @@
 	</fx:Declarations>
 	<s:Label text="haha" />
 	<s:Button x="10" y="22" label="测试"/>
+	<s:Label text="rrir" />
 </s:WindowedApplication>
