--- a/src/SYDesktop.mxml
+++ b/src/SYDesktop.mxml
@@ -2,18 +2,13 @@
 <s:WindowedApplication xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					   xmlns:s="library://ns.adobe.com/flex/spark" 
 					   xmlns:mx="library://ns.adobe.com/flex/mx"
-					   xmlns:ibm="http://www.ibm.com/xmlns/prod/ilog/elixir/2010">
+					   xmlns:sz="com.sz.sydesktop.view.*"
+					   title="Bureau Director Desktop">
 	<fx:Declarations>
 		<!-- 将非可视元素（例如服务、值对象）放在此处 -->
 	</fx:Declarations>
-	<mx:HBox>
-		<mx:VBox>
-			<s:Label text="haha" />
-			<s:Button x="10" y="22" label="测试"/>
-		</mx:VBox>
-		<mx:VBox>
-			<ibm:Calendar />
-		</mx:VBox>
+	<mx:HBox width="100%" height="100%">
+		<sz:MainFrameView width="100%" />
 	</mx:HBox>
 
 </s:WindowedApplication>
