--- a/src/com/sz/sydesktop/view/MainFrameView.mxml
+++ b/src/com/sz/sydesktop/view/MainFrameView.mxml
@@ -2,9 +2,27 @@
 <mx:HBox xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx" 
-		 xmlns:comp="com.sz.sydesktop.view.components.*"  width="100%" height="100%">
+		 xmlns:comp="com.sz.sydesktop.view.components.*"  width="100%" height="100%"
+		 initialize="initializeHandler(event)" xmlns:control="com.sz.sydesktop.control.*" xmlns:business="com.sz.sydesktop.business.*">
+	<fx:Script>
+		<![CDATA[
+			import com.adobe.cairngorm.control.CairngormEventDispatcher;
+			import com.sz.sydesktop.events.GetAppEvent;
+			
+			import mx.events.FlexEvent;
+			
+			protected function initializeHandler(event:FlexEvent):void
+			{
+				var getAppEvent:GetAppEvent = new GetAppEvent();
+				getAppEvent.dispatch();
+			}
+			
+		]]>
+	</fx:Script>
 	<fx:Declarations>
-		<!-- 将非可视元素（例如服务、值对象）放在此处 -->
+		<control:AppControl />
+		<control:PendingControl />
+		<business:Services />
 	</fx:Declarations>
 	<mx:VBox width="25%">
 		<comp:PendingPanel />
