--- a/src/com/sz/sydesktop/view/components/PendingPanel.mxml
+++ b/src/com/sz/sydesktop/view/components/PendingPanel.mxml
@@ -2,17 +2,21 @@
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
-		 title="Pending">
+		 title="待办事项">
+	<fx:Script>
+		<![CDATA[
+			import com.sz.sydesktop.model.ModelLocator;
+		]]>
+	</fx:Script>
 	<fx:Declarations>
 		<!-- 将非可视元素（例如服务、值对象）放在此处 -->
 	</fx:Declarations>
 	<mx:VBox width="100%" height="100%">
-		<s:DataGrid requestedRowCount="10" width="100%">
+		<s:DataGrid requestedRowCount="10" width="100%" dataProvider="{ModelLocator.getInstance().pendings}">
 			<s:columns>
 				<s:ArrayList>
-					<s:GridColumn dataField="dataField1" headerText="Num" width="100"></s:GridColumn>
-					<s:GridColumn dataField="dataField2" headerText="Subject" ></s:GridColumn>
-					<s:GridColumn dataField="dataField3" headerText="Date" width="200"></s:GridColumn>
+					<s:GridColumn dataField="summary" headerText="描述"></s:GridColumn>
+					<s:GridColumn dataField="date" headerText="日期"></s:GridColumn>
 				</s:ArrayList>
 			</s:columns>
 			<s:typicalItem>
