--- a/src/com/sz/sydesktop/view/components/CalendarPanel.mxml
+++ b/src/com/sz/sydesktop/view/components/CalendarPanel.mxml
@@ -3,7 +3,7 @@
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:ibm="http://www.ibm.com/xmlns/prod/ilog/elixir/2010"
-		 title="Calendar">
+		 title="日程表">
 	<fx:Declarations>
 		<!-- 将非可视元素（例如服务、值对象）放在此处 -->
 	</fx:Declarations>
