--- a/src/com/sz/sydesktop/view/components/ContactPanel.mxml
+++ b/src/com/sz/sydesktop/view/components/ContactPanel.mxml
@@ -2,30 +2,41 @@
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
-		 title="Contact">
+		 xmlns:control="com.sz.sydesktop.view.components.*"
+		 title="通讯录" creationComplete="creationCompleteHandle()">
 	<fx:Declarations>
 		<!-- 将非可视元素（例如服务、值对象）放在此处 -->
 	</fx:Declarations>
+	<fx:Script>
+		<![CDATA[
+			import mx.collections.ArrayCollection;
+			protected function creationCompleteHandle():void{
+				
+				var orgData:ArrayCollection = new ArrayCollection();
+				for( var x:uint = 1; x <= 555; x++ )
+				{
+					var obj:Object = new Object();
+					obj.aa="数据"+x.toString();
+					obj.bb="数据"+x.toString();
+					obj.cc="数据"+x.toString();
+					orgData.addItem(obj);
+				}
+				contactPagingBar.dataGrid=DataGrid1;
+				contactPagingBar.orgData=orgData;
+				contactPagingBar.dataBind();
+			}
+		]]>
+	</fx:Script>
 	<mx:VBox width="100%" height ="100%">
-		<s:DataGrid requestedRowCount="10" width="100%" height="100%">
+		<s:DataGrid requestedRowCount="10" width="100%" height="100%" id="DataGrid1">
 			<s:columns>
 				<s:ArrayList>
-					<s:GridColumn dataField="dataField1" headerText="列 1"></s:GridColumn>
-					<s:GridColumn dataField="dataField2" headerText="列 2"></s:GridColumn>
-					<s:GridColumn dataField="dataField3" headerText="列 3"></s:GridColumn>
+					<s:GridColumn dataField="aa" headerText="列 1"></s:GridColumn>
+					<s:GridColumn dataField="bb" headerText="列 2"></s:GridColumn>
+					<s:GridColumn dataField="cc" headerText="列 3"></s:GridColumn>
 				</s:ArrayList>
 			</s:columns>
-			<s:typicalItem>
-				<fx:Object dataField1="示例数据" dataField2="示例数据" dataField3="示例数据"></fx:Object>
-			</s:typicalItem>
-			<s:ArrayList>
-				<fx:Object dataField1="数据1" dataField2="数据1" dataField3="数据1"></fx:Object>
-				<fx:Object dataField1="数据2" dataField2="数据2" dataField3="数据2"></fx:Object>
-				<fx:Object dataField1="数据3" dataField2="数据3" dataField3="数据3"></fx:Object>
-				<fx:Object dataField1="数据4" dataField2="数据4" dataField3="数据4"></fx:Object>
-			</s:ArrayList>
 		</s:DataGrid>
-		
-		
+		<control:PagingBar id="contactPagingBar" />
 	</mx:VBox>
 </s:Panel>
