--- a/src/com/sz/sydesktop/view/components/TrackPanel.mxml
+++ b/src/com/sz/sydesktop/view/components/TrackPanel.mxml
@@ -2,12 +2,12 @@
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
-		 title="Track">
+		 title="跟踪事项">
 	<fx:Declarations>
 		<!-- 将非可视元素（例如服务、值对象）放在此处 -->
 	</fx:Declarations>
 	<mx:VBox width="100%" height="100%">
-		<s:DataGrid requestedRowCount="10" width="100%">
+		<s:DataGrid requestedRowCount="10" height="100%" width="100%">
 			<s:columns>
 				<s:ArrayList>
 					<s:GridColumn dataField="dataField1" headerText="Num" minWidth="50" maxWidth="150" width="100"></s:GridColumn>
