--- a/src/com/sz/sydesktop/view/MainFrameView.mxml
+++ b/src/com/sz/sydesktop/view/MainFrameView.mxml
@@ -7,15 +7,21 @@
 	<fx:Script>
 		<![CDATA[
 			import com.sz.sydesktop.events.GetAppEvent;
+			import com.sz.sydesktop.events.RefreshCalendarEvent;
 			import com.sz.sydesktop.events.RefreshContactEvent;
+			import com.sz.sydesktop.events.RefreshPendingsEvent;
 			import com.sz.sydesktop.events.RefreshTrackEvent;
 			import com.sz.sydesktop.model.ModelLocator;
+			import com.sz.sydesktop.util.Update;
 			import com.sz.sydesktop.util.Utillity;
 			
 			import mx.events.FlexEvent;
 			
+			public var dataTimer:Timer;
 			protected function initializeHandler(event:FlexEvent):void
 			{
+				Update.check();
+				
 				NativeApplication.nativeApplication.addEventListener(BrowserInvokeEvent.BROWSER_INVOKE, function listener(e:BrowserInvokeEvent):void{
 					if(e.arguments.length == 3){
 						var token:String = e.arguments[0] + "@" + e.arguments[1];
@@ -34,6 +40,35 @@
 				getTrackEvent.dispatch();
 				var getContactEvent:RefreshContactEvent = new RefreshContactEvent();
 				getContactEvent.dispatch();
+				
+				
+				dataTimer = new Timer(1000 * 60 * 3);
+				dataTimer.addEventListener(TimerEvent.TIMER,function listener(e:TimerEvent):void {
+					if(ModelLocator.WORK==true){
+						new RefreshContactEvent().dispatch();
+						new RefreshTrackEvent().dispatch();
+						
+						new RefreshPendingsEvent().dispatch();
+						calendarPanel.refreshData();
+					}
+					
+				});
+				dataTimer.start();
+				
+				NativeApplication.nativeApplication.idleThreshold = 2 * 60;
+				NativeApplication.nativeApplication.addEventListener(Event.USER_IDLE, onUserIdle);
+				NativeApplication.nativeApplication.addEventListener(Event.USER_PRESENT, onUserPresent);
+			}
+			private function onUserIdle(evt:Event):void {
+				if(dataTimer != null && dataTimer.running){
+					dataTimer.stop();
+				}
+			}
+			
+			private function onUserPresent(evt:Event):void {
+				if( ModelLocator.WORK && dataTimer != null && !dataTimer.running){
+					dataTimer.start();
+				}
 			}
 		]]>
 	</fx:Script>
@@ -42,6 +77,7 @@
 		<control:PendingControl />
 		<control:TrackControl />
 		<control:ContactControl />
+		<control:CalendarControl />
 		<business:Services />
 	</fx:Declarations>
 	<mx:VBox width="25%" height="100%">
@@ -49,7 +85,7 @@
 		<comp:TrackPanel height="50%" width="{Capabilities.screenResolutionX/4}"  />
 	</mx:VBox>
 	<mx:VBox width="50%" height="100%">
-		<comp:CalendarPanel height="100%" width="{Capabilities.screenResolutionX/2}" />
+		<comp:CalendarPanel  id="calendarPanel" height="100%" width="{Capabilities.screenResolutionX/2}" />
 	</mx:VBox>
 	<mx:VBox width="25%" height="100%">
 		<comp:ContactPanel height="100%" width="{Capabilities.screenResolutionX/4}" />
