--- a/src/SYDesktop.mxml
+++ b/src/SYDesktop.mxml
@@ -11,16 +11,17 @@
 	<fx:Script>
 		<![CDATA[
 			import mx.events.FlexEvent;
+			protected function initializeHandler(event:FlexEvent):void{
+				this.maximize();
+				//dockHandler();
+				
+			}
+			/**
 			
 			[Embed(source='assets/App_16.png')]
 			private var icon16:Class;
 						
-			protected function initializeHandler(event:FlexEvent):void{
-				this.titleIcon = icon16;
-				this.maximize();
-				dockHandler();
-				
-			}
+
 			
 			private function dockHandler():void{
 				addSysTrayIcon();
@@ -77,6 +78,7 @@
 			private function exitHandler():void{
 				this.exit();
 			}
+			**/
 		]]>
 	</fx:Script>
 	<mx:HBox width="100%" height="100%">
