--- a/src/com/sz/sydesktop/view/MainFrameView.mxml
+++ b/src/com/sz/sydesktop/view/MainFrameView.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:HBox xmlns:fx="http://ns.adobe.com/mxml/2009" 
+<mx:VBox xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx" 
 		 xmlns:comp="com.sz.sydesktop.view.components.*"  width="100%" height="100%"
@@ -33,13 +33,14 @@
 				var USER_TOKEN:String = Utillity.readToken();
 				if(USER_TOKEN != null){
 					ModelLocator.USER_TOKEN = USER_TOKEN;
+					var getAppEvent:GetAppEvent = new GetAppEvent();
+					getAppEvent.dispatch();
+					var getTrackEvent:RefreshTrackEvent = new RefreshTrackEvent();
+					getTrackEvent.dispatch();
+					var getContactEvent:RefreshContactEvent = new RefreshContactEvent();
+					getContactEvent.dispatch();
 				}
-				var getAppEvent:GetAppEvent = new GetAppEvent();
-				getAppEvent.dispatch();
-				var getTrackEvent:RefreshTrackEvent = new RefreshTrackEvent();
-				getTrackEvent.dispatch();
-				var getContactEvent:RefreshContactEvent = new RefreshContactEvent();
-				getContactEvent.dispatch();
+
 				
 				
 				dataTimer = new Timer(1000 * 60 * 3);
@@ -80,14 +81,13 @@
 		<control:CalendarControl />
 		<business:Services />
 	</fx:Declarations>
-	<mx:VBox width="25%" height="100%">
-		<comp:PendingPanel height="50%" width="{Capabilities.screenResolutionX/4}"  />
-		<comp:TrackPanel height="50%" width="{Capabilities.screenResolutionX/4}"  />
-	</mx:VBox>
-	<mx:VBox width="50%" height="100%">
+	<mx:HBox width="100%" height="50%">
+		<comp:PendingPanel height="100%" width="{Capabilities.screenResolutionX/4}"  />
 		<comp:CalendarPanel  id="calendarPanel" height="100%" width="{Capabilities.screenResolutionX/2}" />
-	</mx:VBox>
-	<mx:VBox width="25%" height="100%">
-		<comp:ContactPanel height="100%" width="{Capabilities.screenResolutionX/4}" />
-	</mx:VBox>
-</mx:HBox>
+		<comp:ContactPanel height="100%" width="{Capabilities.screenResolutionX/4}"  />
+	</mx:HBox>
+	<mx:HBox width="100%" height="50%">
+		
+		<comp:TrackPanel  id="trackPanel" height="100%" width="100%" />
+	</mx:HBox>
+</mx:VBox>
