--- a/src/com/sz/sydesktop/view/components/ContactPanel.mxml
+++ b/src/com/sz/sydesktop/view/components/ContactPanel.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009" 
+<mx:Panel xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:control="com.sz.sydesktop.view.components.*"
@@ -45,8 +45,9 @@
 				<s:ArrayList>
 					<s:GridColumn dataField="name" headerText="姓名" width="{ContactGrid.width/4}" ></s:GridColumn>
 					<s:GridColumn dataField="teldo" headerText="移动电话"></s:GridColumn>
+					<s:GridColumn dataField="telwork" headerText="联通短号码"></s:GridColumn>
 				</s:ArrayList>
 			</s:columns>
 		</s:DataGrid>
 	</mx:VBox>
-</s:Panel>
+</mx:Panel>
